[project]
name = "llm-zoomcamp-repo-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.28.1",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
